--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -132,7 +132,20 @@ h1, h2 {
       width: 100%;
     }
     
+    .topic-index-icon-red {
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+      background-color: #ff0000;
+    }
+    
     .topic-index-icon {
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+    }
+    
+    .topic-index-icon-comment {
       width: 35px;
       height: 30px;
       margin-left: 20px;
