--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -12,7 +12,14 @@
               <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
             <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
               <% end %>
+              <% else %>
+              <% link_to favorites_path(topic_id: topic.id), method: :delete do %>
+                <% image_tag 'icons/heart-black.png', class: 'topic-index-icon-red' %>
+              <% end %>
             <% end %>
+            <%= topic.favorite_users.count %>
+            
+          <% link_to comments_new_path(topic_id: topic.id) do %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <p class="topic-text">
               <%= topic.description %>
