--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -10,11 +10,11 @@
             <%= image_tag topic.image.url %>
             <% if !topic.favorite_users.include?(current_user) %>
               <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
-            <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon-red' %>
+            <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
               <% end %>
               <% else %>
-              <% link_to favorites_path(topic_id: topic.id), method: :delete do %>
-                <% image_tag 'icons/heart-red.png', class: 'topic-index-icon' %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon-red' %>
               <% end %>
             <% end %>
             <%= topic.favorite_users.count %>
